...
                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                        </collectionViewFlowLayout>
                        <cells/>
                    </collectionView>
                    <tabBarItem key="tabBarItem" title="Chats" id="1jf-H2-gNh"/>
                    <navigationItem key="navigationItem" title="Conversations" largeTitleDisplayMode="always" id="BIr-l7-1TX"/>
                    <connections>
                        <segue destination="qrY-CR-dFM" kind="show" identifier="open_chat" id="cbR-Dz-3zz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Wcq-WC-jTA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        </leftBarButtonItems>
                        <barButtonItem key="rightBarButtonItem" style="plain" id="hp3-y3-qpv">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" id="ttd-mx-Pnp">
                                <rect key="frame" x="309" y="11" width="85" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <inset key="imageEdgeInsets" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Log Out" image="chevron.left.circle.fill" catalog="system">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logOut:" destination="on2-3t-fWa" eventType="touchUpInside" id="u7l-Wo-bY8"/>
                                    <segue destination="Gw0-8v-qMO" kind="presentation" modalPresentationStyle="overFullScreen" id="aeq-rW-S8z"/>
                                </connections>
...
                            <constraint firstItem="tUq-nf-bVE" firstAttribute="top" secondItem="hig-jn-oU6" secondAttribute="top" id="oiq-b3-ULP"/>
                            <constraint firstItem="tUq-nf-bVE" firstAttribute="leading" secondItem="hig-jn-oU6" secondAttribute="leading" id="yGd-aR-NyB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hig-jn-oU6"/>
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Ntu-NM-gzM">
                        <barButtonItem key="rightBarButtonItem" title="Info Button" image="info.circle" catalog="system" style="plain" id="5E5-7q-Xah">
                            <connections>
                                <action selector="onClick:" destination="qrY-CR-dFM" id="eXg-qz-5IQ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
